--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     <main>
         <!--герой-->
         <section class="hero">
+            <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="button">Заказать услугу</button>
-        </section>
+            </div>
+            </section>
 
         <!--Особенности-->
         <section class="features container">
