--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
     <!--шапка сайта-->
     <header>
-        <div class="container">
-        <nav>
+        <div class="container main-nav">
             <a href="/" class="logo"><span class="accent"> Web</span>Studio</a>
+        <nav>
             <ul class="site-nav">
-                <li>
+                <li class="site-nav-item">
                     <a href="" class="link current">Студия</a>
                 </li>
-                <li>
+                <li class="site-nav-item">
                     <a href="./portfolio.html" class="link">Портфолио</a>
                 </li>
-                <li>
+                <li class="site-nav-item">
                     <a href="" class="link">Контакты</a>
                 </li>
             </ul>
         </nav> 
-        <address>
+        <address class="address-nav">
             <ul class="address-list">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="address-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-list-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </div>    
@@ -48,7 +48,7 @@
         <section class="features container">
             <!--Позже спрячем этот заголовок-->
             <!-- <h2>Наши особенности</h2> -->
-            <ul>
+            <ul class="feature-list">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -67,7 +67,7 @@
         <!--Чем мы занимаемся-->
         <section class="about-us container">
             <h2 class="about-us-title">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="about-us-list">
                 <li>
                     <img src="images/img.jpg" alt="Человек набирает код" width="370">
                 </li>
@@ -84,7 +84,7 @@
         <section class="about-team">
             <div class="container">
             <h2 class="about-us-title">Наша команда</h2>
-            <ul>
+            <ul class="about-team-list">
                 <li>
                     <img src="images/photo.jpg" alt="молодой человек в бордовой рубахе" width="270">
                     <h3 class="name">Игорь Демьяненко</h3>
