--- a/portfolio.html
+++ b/portfolio.html
@@ -12,22 +12,28 @@
 <body>
     <!--шапка сайта-->
     <header>
-        <div class="container">
-        <nav>
+        <div class="container main-nav">
             <a href="/" class="logo"><span class="accent"> Web</span>Studio</a>
+        <nav>
             <ul class="site-nav">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li class="site-nav-item">
+                    <a href="./index.html" class="link">Студия</a>
+                </li>
+                <li class="site-nav-item">
+                    <a href="" class="link current">Портфолио</a>
+                </li>
+                <li class="site-nav-item">
+                    <a href="" class="link">Контакты</a>
+                </li>
             </ul>
         </nav> 
-        <address>
+        <address class="address-nav">
             <ul class="address-list">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="address-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-list-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </address>    
-    </div>
+        </address>
+    </div>    
     </header>
     <main>
         <!--Портфолио-->
