добавила часть списка преимуществ

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                     <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
             </ul>
         </section>
 
