изменила рамки в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,63 +52,68 @@
             <li>
                 <a href="">
                 <img src="images/portfolio.jpg" alt="Дизайн веб-сайта Технокряк">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <div class="card-content"><h2>Технокряк</h2>
+                <p>Веб-сайт</p></div>
                 </a>
             </li>
             <li>
                 <a href="">
                 <img src="images/portfolio1.jpg" alt="Пример дизайна постера">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <div class="card-content"><h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p></div>
                 </a>
             </li>
             <li>
                 <a href="">
                 <img src="images/portfolio2.jpg" alt="Дизайна приложения Ресторан Seafood">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <div class="card-content"><h2>Ресторан Seafood</h2>
+                <p>Приложение</p></div>
                 </a>
             </li>
             <li> 
                 <a href="">
                 <img src="images/portfolio3.jpg" alt="Дизайн проекта Prime">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <div class="card-content"><h2>Проект Prime</h2>
+                <p>Маркетинг</p></div>
                 </a>
             </li>
             <li>
                 <a href="">
                 <img src="images/portfolio4.jpg" alt="Приложение Boxes">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <div class="card-content"><h2>Проект Boxes</h2>
+                <p>Приложение</p></div>
             </a>
             </li>
             <li>
                 <a href="">
                 <img src="images/portfolio5.jpg" alt="Пример дизайна веб-сайта2">
+                <div class="card-content">
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
-            </a></li>
+            </div>
+            </a>
+        </li>
             <li>
                 <a href="">
                 <img src="images/portfolio6.jpg" alt="Дизайн издания Limited Edition">
+                <div class="card-content">
                 <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p>
+            </div>
             </a>
             </li>
             <li>
                 <a href="">
                 <img src="images/portfolio7.jpg" alt="Дизайн проекта LAB">
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+                <div class="card-content"><h2>Проект LAB</h2>
+                <p>Маркетинг</p></div>
             </a>
             </li>
             <li>
                 <a href="">
                 <img src="images/portfolio8.jpg" alt=" Дизайн приложения Growing Business">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <div class="card-content"><h2>Growing Business</h2>
+                <p>Приложение</p></div>
                 </a>
             </li>
         </ul>
