--- a/index.html
+++ b/index.html
@@ -91,23 +91,25 @@
             <ul class="about-team-list">
                 <li>
                     <img src="images/photo.jpg" alt="молодой человек в бордовой рубахе" width="270">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="position">Product Designer</p>
+                    <div class="team-card">
+                        <h3 class="name">Игорь Демьяненко</h3>
+                        <p class="position">Product Designer</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/photo1.jpg" alt="блондинка в очках и черном пиджаке" width="270">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p class="position">Frontend Developer</p>
+                    <div class="team-card"><h3 class="name">Ольга Репина</h3>
+                    <p class="position">Frontend Developer</p></div>
                 </li>
                 <li>
                     <img src="images/photo2.jpg" alt="молодой человек в голубой рубахе" width="270">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p class="position">Marketing</p>
+                    <div class="team-card"><h3 class="name">Николай Тарасов</h3>
+                    <p class="position">Marketing</p></div>
                 </li>
                 <li>
                     <img src="images/photo3.jpg" alt="молодой человек в черной майке" width="270">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p class="position">UI Designer</p>
+                    <div class="team-card"><h3 class="name">Михаил Ермаков</h3>
+                    <p class="position">UI Designer</p></div>
                 </li>
             </ul>
             </div>
