--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!--шапка сайта-->
     <header>
         <div class="container main-nav">
-            <a href="/" class="logo"><span class="accent"> Web</span>Studio</a>
         <nav>
+            <a href="/" class="logo"><span class="accent"> Web</span>Studio</a>
             <ul class="site-nav">
                 <li class="site-nav-item">
                     <a href="" class="link current">Студия</a>
@@ -45,7 +45,8 @@
             </section>
 
         <!--Особенности-->
-        <section class="features container">
+        <section class="features">
+            <div class="container">
             <!--Позже спрячем этот заголовок-->
             <!-- <h2>Наши особенности</h2> -->
             <ul class="feature-list">
@@ -66,10 +67,12 @@
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+        </div>
         </section>
 
         <!--Чем мы занимаемся-->
-        <section class="about-us container">
+        <section class="about-us">
+            <div class="container">
             <h2 class="about-us-title">Чем мы занимаемся</h2>
             <ul class="about-us-list">
                 <li>
@@ -82,6 +85,7 @@
                     <img src="images/img2.jpg" alt="Палитра цветов" width="370">
                 </li>
             </ul>
+        </div>
         </section>
 
         <!--О команде-->
